@@ -1,3 +1,13 @@
+[2017-04-03] --
+
+## Added
+
+- README.Rmd
+- Option to output DAG as EPS file
+
+
+//
+
 [2017-04-02] --
 
 - Initial commit
